--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,8 @@
 				</configuration>
 				<executions>
 					<execution>
-						<id>make-assembly</id> <!-- this is used for inheritance merges -->
-						<phase>package</phase> <!-- append to the packaging phase. -->
+						<id>make-assembly</id> <!-- This is used for inheritance merges -->
+						<phase>package</phase> <!-- Append to the packaging phase. -->
 						<goals>
 							<goal>assembly</goal> <!-- goals == mojos -->
 						</goals>
