--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <version>6.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <!-- New -->
+    <!-- News -->
     <build>
         <plugins>
 
