--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <version>8.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <!-- News -->
+    <!-- New -->
     <build>
         <plugins>
 
